selfhost/test/typechecker/import/error_unimplemented_nonrelative.out
Error at %FILE_NAME%:1:15
Not yet implemented:
  |  import a from "foo"
                   ^
Reason: nonrelative imports
